--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,19 +2,9 @@ html,
 body {
 	margin: 0;
 	padding: 0;
+	color: var(--black);
 
-	font-family:
-		-apple-system,
-		BlinkMacSystemFont,
-		"Segoe UI",
-		Roboto,
-		Oxygen,
-		Ubuntu,
-		Cantarell,
-		"Fira Sans",
-		"Droid Sans",
-		"Helvetica Neue",
-		sans-serif;
+	font-family: var(--font-family);
 }
 
 a {
@@ -27,13 +17,13 @@ a {
 	box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-	html {
-		color-scheme: dark;
-	}
-
-	body {
-		color: white;
-		background: black;
-	}
+:root {
+	--black: #3B434E;
+	--primary: #7653FC;
+	--grey: #787D85;
+	--green: #1DC37E;
+	--green-light: #C8F8E4;
+	--red: #FC836D;
+	--white: white;
+	--font-family: "Noto Sans", sans-serif;
 }
