--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,7 +20,9 @@ a {
 :root {
 	--black: #3B434E;
 	--primary: #7653FC;
+	--primary-hover: #442da2;
 	--grey: #787D85;
+	--grey-light: #EBEBEB;
 	--green: #1DC37E;
 	--green-light: #C8F8E4;
 	--red: #FC836D;
