feature верстка Меню

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,7 @@ a {
 	--primary-hover: #442da2;
 	--grey: #787D85;
 	--grey-light: #EBEBEB;
+	--grey-dark: #787D85;
 	--green: #1DC37E;
 	--green-light: #C8F8E4;
 	--red: #FC836D;
