--- a/layout/Menu/Menu.module.css
+++ b/layout/Menu/Menu.module.css
@@ -23,7 +23,7 @@
   fill: var(--primary);
 }
 
-.secondCategory {
+.secondLevel {
   margin-bottom: 13px;
 
   cursor: pointer;
@@ -42,6 +42,14 @@
   border-left: 1px solid #dfdfdf;
   margin-top: 14px;
   padding-top: 6px;
+}
+
+.secondLevelBlock {
+  display: none;
+}
+
+.secondLevelBlockOpened {
+  display: block;
 }
 
 .secondLevelBlockOpened:last-child {
