--- a/page-components/TopPageComponent/TopPageComponent.module.css
+++ b/page-components/TopPageComponent/TopPageComponent.module.css
@@ -15,3 +15,29 @@
 	justify-items: left;
 	gap: 20px;
 }
+
+.seo {
+	margin-bottom: 15px;
+}
+
+.seo h1 {
+	font-weight: 500;
+	font-size: 26px;
+	line-height: 1.35;
+	margin: 0;
+}
+
+.seo h2 {
+	font-weight: 500;
+	font-size: 22px;
+	line-height: 1.36;
+	margin-top: 0;
+	margin-bottom: 25px;
+}
+
+.seo h3 {
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 1.35;
+	margin: 0;
+}
