modify изменить фон основной разметки

--- a/layout/Layout.module.css
+++ b/layout/Layout.module.css
@@ -9,7 +9,7 @@
     'footer footer footer footer'
   ;
   gap: 40px 30px;
-  background-color: #E5E5E5;
+  background-color: #F5F6F8;
 }
 
 .header {
