feature создать компоненты Input и Textarea

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,7 @@ a {
 	--black: #3B434E;
 	--primary: #7653FC;
 	--primary-hover: #442da2;
-	--grey: #787D85;
+	--grey: #A4A4A4;
 	--grey-light: #EBEBEB;
 	--grey-dark: #787D85;
 	--green: #1DC37E;
