--- a/page-components/TopPageComponent/TopPageComponent.module.css
+++ b/page-components/TopPageComponent/TopPageComponent.module.css
@@ -5,6 +5,7 @@
 	align-items: baseline;
 	justify-items: left;
 	gap: 20px;
+	margin-bottom: 30px;
 }
 
 .hhTitle {
@@ -40,4 +41,10 @@
 	font-size: 20px;
 	line-height: 1.35;
 	margin: 0;
+}
+
+@media screen and (max-width: 640px) {
+	.title {
+		grid-template-columns: auto 1fr
+	}
 }
