--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,6 +27,7 @@ a {
 	--green: #1DC37E;
 	--green-light: #C8F8E4;
 	--red: #FC836D;
+	--red-light: #ffb2a4;
 	--white: white;
 	--font-family: "Noto Sans", sans-serif;
 }
