--- a/components/Product/Product.module.css
+++ b/components/Product/Product.module.css
@@ -174,6 +174,11 @@
 
 }
 
+.reviewLink {
+	color: var(--primary);
+	cursor: pointer;
+}
+
 @media screen and (max-width: 1320px) {
 	.product {
 		grid-template-columns: 70px 30px auto 40px auto 40px 1fr;
