--- a/layout/Layout.module.css
+++ b/layout/Layout.module.css
@@ -14,7 +14,6 @@
 
 .header {
   grid-area: header;
-  display: none;
 }
 
 .sidebar {
@@ -37,14 +36,11 @@
       'body'
       'footer'
     ;
+    gap: 10px;
   }
 
   .sidebar {
     display: none !important;
-  }
-
-  .header {
-    display: block;
   }
 
   .body {
