--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,12 +19,12 @@ a {
 
 :root {
 	--black: #3B434E;
-	--primary: #7653FC;
-	--primary-hover: #442da2;
-	--grey: #A4A4A4;
+	--primary: #724ffa;
+	--primary-hover: #6344df;
+	--grey: #707070;
 	--grey-light: #EBEBEB;
-	--grey-dark: #787D85;
-	--green: #1DC37E;
+	--grey-dark: #6c7077;
+	--green: #007b48;
 	--green-light: #C8F8E4;
 	--red: #FC836D;
 	--red-light: #ffb2a4;
