--- a/components/Sort/Sort.module.css
+++ b/components/Sort/Sort.module.css
@@ -42,6 +42,10 @@
 	outline: 1px solid var(--primary);
 }
 
+.sortName {
+	display: none;
+}
+
 @media screen and (max-width: 480px) {
 	.sort {
 		gap: 20px;
