--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,13 @@ a {
 	color: inherit;
 }
 
+.visuallyHidden {
+	width: 0;
+	height: 0;
+	overflow: hidden;
+	position: absolute;
+}
+
 * {
 	box-sizing: border-box;
 }
