--- a/layout/Menu/Menu.module.css
+++ b/layout/Menu/Menu.module.css
@@ -13,6 +13,11 @@
   margin-top: 20px;
 }
 
+.firstLevelList {
+  list-style: none;
+  padding: 0;
+}
+
 .firstLevelActive,
 .firstLevel:hover {
   color: var(--primary);
@@ -33,18 +38,25 @@
 
   font-weight: 300;
   font-size: 12px;
+
+  background: none;
+  border: none;
+  padding: 0;
 }
 
 .secondBlock {
   margin-left: 12px;
-  padding-left: 32px;
+  padding: 0 0 0 32px;
   border-left: 1px solid #dfdfdf;
   margin-top: 14px;
   padding-top: 6px;
+  list-style: none;
 }
 
 .secondLevelBlock {
   overflow: hidden;
+  list-style: none;
+  padding: 0;
 }
 
 .thirdLevel {
