--- a/components/Product/Product.module.css
+++ b/components/Product/Product.module.css
@@ -1,6 +1,9 @@
 .product {
 	display: grid;
-	grid-template-columns: [start] 70px [logoend] 30px [titlestart] calc(50% - 100px) [middle] 1fr [pricestart] auto [priceend] 40px [creditstart] auto [creditend] 40px [ratestart] auto [end];
+	grid-template-columns:
+		[start] 70px [logoend] 30px [titlestart] calc(
+			50% - 100px
+		) [middle] 1fr [pricestart] auto [priceend] 40px [creditstart] auto [creditend] 40px [ratestart] auto [end];
 
 	margin-top: 30px;
 	padding: 30px;
@@ -49,6 +52,9 @@
 
 .advBlock {
 	grid-column: middle / end;
+
+	font-size: 16px;
+	line-height: 22px;
 }
 
 .logo img {
@@ -108,11 +114,6 @@
 	margin-left: 20px;
 }
 
-.advBlock {
-	font-size: 16px;
-	line-height: 22px;
-}
-
 .advTitle {
 	margin-bottom: 5px;
 
@@ -161,6 +162,7 @@
 
 .closed {
 	overflow: hidden;
+
 	max-height: 0;
 	padding: 0;
 }
@@ -175,8 +177,9 @@
 }
 
 .reviewLink {
-	color: var(--primary);
 	cursor: pointer;
+
+	color: var(--primary);
 }
 
 @media screen and (max-width: 1320px) {
