--- a/layout/Footer/Footer.module.css
+++ b/layout/Footer/Footer.module.css
@@ -1,32 +1,36 @@
 .footer {
-  padding: 25px 30px;
-  background-color: var(--primary);
-  color: var(--white);
-  font-size: 16px;
-  line-height: 1.3;
-  font-weight: 500;
+	display: grid;
 
-  display: grid;
-  grid-template-columns: 1fr auto auto;
-  gap: 10px 40px;
+	padding: 25px 30px;
+
+	color: var(--white);
+	background-color: var(--primary);
+
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 1.3;
+	grid-template-columns: 1fr auto auto;
+	gap: 10px 40px;
 }
 
 .rights {
-  margin: 0;
+	margin: 0;
 }
 
 .link {
-  text-decoration: none;
+	text-decoration: none;
 }
 
 .link:hover {
-  color: var(--grey-light)
+	color: var(--grey-light);
 }
 
 @media (max-width: 790px) {
-  .footer {
-    grid-template-columns: 1fr;
-    text-align: center;
-    font-size: 12px;
-  }
+	.footer {
+		grid-template-columns: 1fr;
+
+		text-align: center;
+
+		font-size: 12px;
+	}
 }
