--- a/layout/Layout.module.css
+++ b/layout/Layout.module.css
@@ -1,66 +1,70 @@
 .wrapper {
-  display: grid;
-  min-height: 100vh;
-  grid-template-columns: auto 230px minmax(320px, 1200px) auto;
-  grid-template-rows: auto 1fr auto;
-  grid-template-areas:
-    '. header header .'
-    '. sidebar body .'
-    'footer footer footer footer'
-  ;
-  gap: 40px 30px;
-  background-color: #F5F6F8;
+	display: grid;
+
+	min-height: 100vh;
+	grid-template-columns: auto 230px minmax(320px, 1200px) auto;
+	grid-template-rows: auto 1fr auto;
+	grid-template-areas:
+		". header header ."
+		". sidebar body ."
+		"footer footer footer footer";
+	gap: 40px 30px;
+
+	background-color: #F5F6F8;
 }
 
 .header {
-  grid-area: header;
+	grid-area: header;
 }
 
 .sidebar {
-  grid-area: sidebar;
+	grid-area: sidebar;
 }
 
 .body {
-  grid-area: body;
-  outline: none;
+	grid-area: body;
+
+	outline: none;
 }
 
 .footer {
-  grid-area: footer;
+	grid-area: footer;
 }
 
 .skipLink {
-  display: block;
-  position: fixed;
-  z-index: 11;
-  left: 100px;
-  top: 0;
-  overflow: hidden;
-  height: 0;
-  background: var(--primary);
-  color: var(--white);
+	position: fixed;
+	z-index: 11;
+	top: 0;
+	left: 100px;
+
+	display: block;
+	overflow: hidden;
+
+	height: 0;
+
+	color: var(--white);
+	background: var(--primary);
 }
 
 .displayed {
-  height: auto;
+	height: auto;
 }
 
 @media (max-width: 765px) {
-  .wrapper {
-    grid-template-columns: minmax(320px, 1fr);
-    grid-template-areas:
-      'header'
-      'body'
-      'footer'
-    ;
-    gap: 10px;
-  }
+	.wrapper {
+		grid-template-columns: minmax(320px, 1fr);
+		grid-template-areas:
+			"header"
+			"body"
+			"footer";
+		gap: 10px;
+	}
 
-  .sidebar {
-    display: none !important;
-  }
+	.sidebar {
+		display: none !important;
+	}
 
-  .body {
-    padding: 15px;
-  }
+	.body {
+		padding: 15px;
+	}
 }
