--- a/page-components/TopPageComponent/TopPageComponent.module.css
+++ b/page-components/TopPageComponent/TopPageComponent.module.css
@@ -5,6 +5,7 @@
 	align-items: baseline;
 	justify-items: left;
 	gap: 20px;
+
 	margin-bottom: 30px;
 }
 
@@ -22,29 +23,32 @@
 }
 
 .seo h1 {
-	font-weight: 500;
-	font-size: 26px;
-	line-height: 1.35;
 	margin: 0;
+
+	font-size: 26px;
+	font-weight: 500;
+	line-height: 1.35;
 }
 
 .seo h2 {
-	font-weight: 500;
-	font-size: 22px;
-	line-height: 1.36;
 	margin-top: 0;
 	margin-bottom: 25px;
+
+	font-size: 22px;
+	font-weight: 500;
+	line-height: 1.36;
 }
 
 .seo h3 {
-	font-weight: 700;
-	font-size: 20px;
-	line-height: 1.35;
 	margin: 0;
+
+	font-size: 20px;
+	font-weight: 700;
+	line-height: 1.35;
 }
 
 @media screen and (max-width: 640px) {
 	.title {
-		grid-template-columns: auto 1fr
+		grid-template-columns: auto 1fr;
 	}
 }
